editors/tree-sitter/grammar.js
    source_file: ($) => repeat($._declaration),

    // Only these appear at the top level of a file; `parse_file` in
    // src/parser/parser.rs rejects everything else, including `let`.
    _declaration: ($) =>
      choice(
        $.attribute,
        $.import_declaration,
        $.function_declaration,
        $.struct_declaration,
        $.enum_declaration,
        $.impl_block,
        $.dylib_block,
        $.host_block,
      ),

    // ------------------------------------------------------------------
    // Declarations
    // ------------------------------------------------------------------

    // `@cfg(...)` in front of a declaration, a method or a statement. The
    // parser reads it as a prefix of what follows; here it is a sibling node,
    // which is all highlighting needs.
    attribute: ($) =>
      seq('@', field('name', $.identifier), field('arguments', $.attribute_arguments)),

    attribute_arguments: ($) => seq('(', sepByTrailing(',', $.cfg_predicate), ')'),

    // A flag, `key = "value"`, or `not`/`any`/`all` around further conditions.
    cfg_predicate: ($) =>
      choice(
        field('flag', $.identifier),
        seq(field('key', $.identifier), '=', field('value', $.string_literal)),
        seq(field('combinator', $.identifier), field('arguments', $.attribute_arguments)),
      ),

    import_declaration: ($) =>
      seq(
        'import',
        field('path', $.string_literal),
        optional(seq('as', field('alias', $.identifier))),
        ';',
      ),

    function_declaration: ($) =>
      seq(
        'fn',
        field('name', $.identifier),
        optional(field('type_parameters', $.type_parameters)),
        field('parameters', $.parameter_list),
        optional(field('return_type', $.return_type)),
        field('body', choice($.block, $.expression_body)),
      ),

    // `=> expr;`: a body that evaluates to one expression, the same as
    // `{ return expr; }`.
    expression_body: ($) => seq('=>', field('value', $._expression), ';'),

    parameter_list: ($) => seq('(', sepByTrailing(',', $.parameter), ')'),

    parameter: ($) =>
      seq(
        field('name', $.identifier),
        optional(seq(':', field('type', $._type))),
      ),

    return_type: ($) => seq('->', $._type),

    struct_declaration: ($) =>
      seq(
        'struct',
        field('name', $.identifier),
        optional(field('type_parameters', $.type_parameters)),
        field('body', $.field_declaration_list),
      ),

    field_declaration_list: ($) =>
      seq('{', sepBy1(',', $.field_declaration), optional(','), '}'),

    // `cwd: string = "."`: the value the struct's default gives the field.
    field_declaration: ($) =>
      seq(
        field('name', $.identifier),
        ':',
        field('type', $._type),
        optional(seq('=', field('default', $._expression))),
      ),

    enum_declaration: ($) =>
      seq(
        'enum',
        field('name', $.identifier),
        optional(field('type_parameters', $.type_parameters)),
        field('body', $.enum_variant_list),
      ),

    enum_variant_list: ($) => seq('{', sepByTrailing(',', $.enum_variant), '}'),

    enum_variant: ($) =>
      seq(field('name', $.identifier), optional(field('payload', $.payload_type_list))),

    payload_type_list: ($) => seq('(', sepByTrailing(',', $._type), ')'),

    // Methods lower to mangled free functions, so an impl block holds nothing
    // but `fn` declarations.
    //
    // An `impl` on a generic type names type arguments in its header, either a
    // parameter it binds for the methods (`impl Cell<T>`) or the concrete
    // instantiation the block applies to (`impl Signal<int>`). Both are spelt
    // as a type argument list.
    impl_block: ($) =>
      seq(
        'impl',
        field('type', $._type_identifier),
        optional(field('type_arguments', $.type_arguments)),
        '{',
        repeat(choice($.attribute, $.function_declaration, $.operator_declaration)),
        '}',
      ),

    // A method named by an operator symbol is what that operator reaches on a
    // value of the type. This is the one place `fn` takes something other than
    // an identifier, and an operator method has no type parameters of its own.
    operator_declaration: ($) =>
      seq(
        'fn',
        field('name', $.operator_name),
        field('parameters', $.parameter_list),
        optional(field('return_type', $.return_type)),
        field('body', choice($.block, $.expression_body)),
      ),

    // `-` stands for both subtraction and negation; the parameter count tells
    // them apart. `!=`, `>` and `>=` are missing because a type gets them from
    // the `==`, `<` and `<=` it defines.
    operator_name: (_) =>
      choice(
        '+',
        '-',
        '*',
        '/',
        '%',
        '^',
        '&',
        '|',
        '^^',
        '<<',
        '>>',
        '==',
        '<',
        '<=',
        '~',
      ),

    dylib_block: ($) =>
      seq('dylib', field('path', $.string_literal), field('body', $.signature_list)),

    host_block: ($) =>
      seq('host', field('namespace', $.string_literal), field('body', $.signature_list)),

    // A `host` block also declares the structs its functions take.
    signature_list: ($) =>
      seq('{', repeat(choice($.function_signature, $.struct_declaration)), '}'),

    // `int add(int, int);`, or `log(string);` for a function returning null.
    // Parameters are types only; `...` marks a variadic host function.
    function_signature: ($) =>
      seq(
        optional(field('return_type', $._type)),
        field('name', $.identifier),
        '(',
        optional(choice($.variadic_parameter, sepByTrailing(',', $._type))),
        ')',
        ';',
      ),

    variadic_parameter: (_) => '...',

    // ------------------------------------------------------------------
    // Types
    // ------------------------------------------------------------------

    _type: ($) => choice($._atomic_type, $.union_type),

    _atomic_type: ($) =>
      choice(
        $._type_identifier,
        $.qualified_type,
        $.generic_type,
        $.array_type,
        $.map_type,
        $.function_type,
        $.parenthesized_type,
      ),

    // `fn(int, int) -> int`, the type of a position that holds a function. The
    // return type runs to the end of the type, so the `[]` in
    // `fn(int) -> int[]` belongs to it; `(fn(int) -> int)[]` is the list of
    // functions.
    function_type: ($) =>
      prec.right(
        seq(
          'fn',
          '(',
          optional(sepByTrailing(',', $._type)),
          ')',
          optional(seq('->', field('return_type', $._type))),
        ),
      ),

    parenthesized_type: ($) => seq('(', $._type, ')'),

    // `Cell<int>`, and nested as deep as it goes: a type argument is an
    // ordinary type, so `Cell<Cell<int>>` and `Cell<int>[]` both spell out.
    //
    // After `is` and `as` a type meets the expression grammar, where `<` is
    // also a comparison; the compiler reads a type there, so a `<` after a
    // type name opens its argument list.
    generic_type: ($) =>
      prec(
        1,
        seq(
          field('name', choice($._type_identifier, $.qualified_type)),
          field('type_arguments', $.type_arguments),
        ),
      ),

    // The names a declaration binds: `struct Cell<T>`, `fn first<T>`. Each is
    // a bare name, never a composite type.
    type_parameters: ($) => seq('<', sepBy1(',', $._type_identifier), '>'),

    // The types a use names. A type argument list has no spelling of its own,
    // so in an expression one stands only where a `(`, a `{` or a `::` follows
    // the closing `>`, and here that falls out of the grammar, because nothing
    // else accepts a list: `a < b` and `a < b > c` stay the comparisons they
    // have always been.
    //
    // The compiler, in `type_args_ahead`, narrows it twice more, and this
    // grammar deliberately does not: in an `if`, `while` or `for` header a
    // struct literal cannot start, so a following `{` does not make a list
    // there, and after a `.` a following `::` does not either. Both accept
    // here and are refused by the compiler, which is the direction to err in;
    // the language server reports them while highlighting stays steady. See
    // the "When `<` is a comparison" section of
    // docs/src/language/generics.md.
    type_arguments: ($) => seq('<', sepBy1(',', $._type), '>'),

    // A union runs as far as the `|`s go, so `fn() -> A|B` returns the union.
    // See `function_type`.
    union_type: ($) =>
      prec.right(1, seq($._atomic_type, repeat1(seq('|', $._atomic_type)))),

    // `[]` binds to the type on its left, so `fn(int) -> int[]` returns the
    // list. See `function_type`.
    array_type: ($) =>
      prec.right(1, seq(field('element', $._atomic_type), '[', ']')),

    map_type: ($) => seq('{', field('key', $._type), ':', field('value', $._type), '}'),

    // `a::b::c` nests to the left, so the last segment is the name and
    // everything before it is the module path.
    qualified_type: ($) =>
      seq(
        field('module', choice($._type_identifier, $.qualified_type)),
        '::',
        field('name', $._type_identifier),
      ),

    _type_identifier: ($) => alias($.identifier, $.type_identifier),

    // ------------------------------------------------------------------
    // Statements
    // ------------------------------------------------------------------

    block: ($) => seq('{', repeat($._statement), optional($._expression), '}'),

    _statement: ($) =>
      choice(
        $.attribute,
        $.let_declaration,
        $.assignment_statement,
        $.expression_statement,
        $.return_statement,
        $.throw_statement,
        $.break_statement,
        $.continue_statement,
        $.while_statement,
        $.for_statement,
        $.loop_statement,
        $.try_statement,
        $.block,
        $.struct_declaration,
        $.enum_declaration,
      ),

    // A block-bodied expression stands alone as a statement; anything else
    // needs the semicolon.
    expression_statement: ($) =>
      choice(seq($._expression, ';'), prec(1, $.if_expression), prec(1, $.match_expression)),

    return_statement: ($) => seq('return', optional(field('value', $._expression)), ';'),

    // `throw "kind";` raises an error of that kind.
    match_expression: ($) =>
      seq('match', field('value', $._expression), field('body', $.match_arm_list)),

    // An arm is `pattern => { ... }`, or `pattern => expr` followed by a `,`
    // that the last arm may leave off.
    match_arm_list: ($) =>
      seq(
        '{',
        repeat(choice($.match_arm, alias($._expression_match_arm, $.match_arm))),
        optional(alias($._last_match_arm, $.match_arm)),
        '}',
      ),

    match_arm: ($) => seq(field('pattern', $.match_pattern), '=>', field('body', $.block)),

    _expression_match_arm: ($) =>
      seq(field('pattern', $.match_pattern), '=>', field('value', $._expression), ','),

    _last_match_arm: ($) =>
      seq(field('pattern', $.match_pattern), '=>', field('value', $._expression)),

    // A pattern is an expression: an enum variant with bindings, a qualified
    // name, or a literal compared for equality. `|` separates alternatives and
    // binds looser than any operator inside one, so `1 | 2` is two patterns
    // rather than bitwise or; `(a | b)` is the or. `_` is the wildcard, and it
    // comes last.
    match_pattern: ($) =>
      seq(
        field('alternative', $._expression),
        repeat(prec(PREC.bit_or + 1, seq('|', field('alternative', $._expression)))),
      ),

    _expression: ($) =>
      choice(
        // A name, plain or namespaced, is an expression at the same level as
        // everything that continues it: a call, a struct literal, a longer
        // path, a type argument list. Holding them level is what keeps each
        // reading a candidate until the token that settles it, so `a < b` and
        // `a<b>(c)` are both still in play at the `<`, and `Colour::Red` in an
        // `if` header is still a value and not the start of a literal.
        prec(PREC.postfix, $.identifier),
        prec(PREC.postfix, $.qualified_identifier),
        $.integer_literal,
        $.float_literal,
        $.string_literal,
        $.boolean_literal,
        $.null_literal,
        $.array_literal,
        $.map_literal,
        $.struct_literal,
        $.call_expression,
        $.method_call_expression,
        $.field_expression,
        $.index_expression,
        $.slice_expression,
        $.propagate_expression,
        $.unary_expression,
        $.binary_expression,
        $.type_test_expression,
        $.cast_expression,
        $.parenthesized_expression,
        $.closure_expression,
        $.if_expression,
        $.match_expression,
        $.macro_invocation,
      ),

    binary_expression: ($) => {
      const table = [
        [PREC.or, '||'],
        [PREC.and, '&&'],
        [PREC.equality, '=='],
        [PREC.equality, '!='],
        [PREC.comparison, '<'],
        [PREC.comparison, '<='],
        [PREC.comparison, '>'],
        [PREC.comparison, '>='],
        [PREC.bit_or, '|'],
        [PREC.bit_xor, '^^'],
        [PREC.bit_and, '&'],
        [PREC.shift, '<<'],
        [PREC.shift, '>>'],
        [PREC.additive, '+'],
        [PREC.additive, '-'],
        [PREC.multiplicative, '*'],
        [PREC.multiplicative, '/'],
        [PREC.multiplicative, '%'],
      ];

      return choice(
        ...table.map(([precedence, operator]) =>
          prec.left(
            Number(precedence),
            seq(
              field('left', $._expression),
              field('operator', operator),
              field('right', $._expression),
            ),
          ),
        ),
        prec.right(
          PREC.power,
          seq(field('left', $._expression), field('operator', '^'), field('right', $._expression)),
        ),
      );
    },

    // `v is int` tests a value's type and `v is Some(x)` its variant; `v as
    // int` is the checked downcast. Both bind at the level of the comparisons
    // and take a type on their right, so `v as int + 1` adds to the downcast.
    // A name with an argument list after `is` can only be a variant pattern.
    call_expression: ($) =>
      prec(
        PREC.postfix,
        choice(
          seq(field('function', $._callee), field('arguments', $.arguments)),
          prec.dynamic(
            PREC.type_arguments,
            seq(
              field('function', choice($.identifier, $.qualified_identifier)),
              field('type_arguments', $.type_arguments),
              field('arguments', $.arguments),
            ),
          ),
        ),
      ),

    // What a call applies to. A call attaches to the expression in front of it,
    // so what another call or an index handed back is called where it stands.
    // A type argument list only reads on a name, so that branch keeps its own
    // narrower callee.
    _callee: ($) =>
      choice(
        $.identifier,
        $.qualified_identifier,
        $.call_expression,
        $.index_expression,
        $.parenthesized_expression,
      ),

    field_expression: ($) =>
      prec(PREC.postfix, seq(field('object', $._expression), '.', field('field', $.identifier))),

    // `x?`: the value in a `Some` or an `Ok`, or an early return of the `None`
    // or the `Err`.
    index_expression: ($) =>
      prec(PREC.postfix, seq(field('object', $._expression), '[', field('index', $._expression), ']')),

    // `a[low..high]`, `a[..high]` from the start, and `a[low..]` to the end.
    arguments: ($) => seq('(', sepByTrailing(',', $._expression), ')'),

    identifier: (_) => /[a-zA-Z_][a-zA-Z0-9_]*/,

    boolean_literal: (_) => choice('true', 'false'),

    comment: (_) => token(seq('//', /[^\r\n]*/)),
  },
});
