editors/tree-sitter/test/corpus/declarations.txt
================================================================================
Imports (libs/std/tests/test_assert.cdl)
================================================================================

import "std/assert";
import "pgo_import_test.cdl";
import "std/json" as j;
import "std/assert" { eq, is_true };
import "std/set" { Set, };

--------------------------------------------------------------------------------

(source_file
  (import_declaration
    (string_literal))
  (import_declaration
    (string_literal))
  (import_declaration
    (string_literal)
    (identifier))
  (import_declaration
    (string_literal)
    (import_items
      (identifier)
      (identifier)))
  (import_declaration
    (string_literal)
    (import_items
      (identifier))))

================================================================================
Function declaration
================================================================================

/// Truncates a float to an `int`.
fn whole(x) {
    return int(x);
}

--------------------------------------------------------------------------------

(source_file
  (comment)
  (function_declaration
    (identifier)
    (parameter_list
      (parameter
        (identifier)))
    (block
      (return_statement
        (call_expression
          (identifier)
          (arguments
            (identifier)))))))

================================================================================
Typed parameters and return annotation (docs/src/integration/embedding.md)
================================================================================

fn banner(label: string) -> int {
    return app::width(label) + 2;
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (identifier)
    (parameter_list
      (parameter
        (identifier)
        (type_identifier)))
    (return_type
      (type_identifier))
    (block
      (return_statement
        (binary_expression
          (call_expression
            (qualified_identifier
              (identifier)
              (identifier))
            (arguments
              (identifier)))
          (integer_literal))))))

================================================================================
Struct declaration (examples/nbody/nbody_lua.cdl)
================================================================================

struct Body {
    x: float,
    y: float,
    z: float,
    mass: float
}

--------------------------------------------------------------------------------

(source_file
  (struct_declaration
    (identifier)
    (field_declaration_list
      (field_declaration
        (identifier)
        (type_identifier))
      (field_declaration
        (identifier)
        (type_identifier))
      (field_declaration
        (identifier)
        (type_identifier))
      (field_declaration
        (identifier)
        (type_identifier)))))

================================================================================
Array, map, and union field types (docs/src/language/types.md)
================================================================================

struct Index {
    names: string[],
    grid: int[][],
    counts: {string: int},
    either: int|string,
}

--------------------------------------------------------------------------------

(source_file
  (struct_declaration
    (identifier)
    (field_declaration_list
      (field_declaration
        (identifier)
        (array_type
          (type_identifier)))
      (field_declaration
        (identifier)
        (array_type
          (array_type
            (type_identifier))))
      (field_declaration
        (identifier)
        (map_type
          (type_identifier)
          (type_identifier)))
      (field_declaration
        (identifier)
        (union_type
          (type_identifier)
          (type_identifier))))))

================================================================================
Enum with payloads (libs/std/option.cdl)
================================================================================

enum Option {
    Some(any),
    None,
}

--------------------------------------------------------------------------------

(source_file
  (enum_declaration
    (identifier)
    (enum_variant_list
      (enum_variant
        (identifier)
        (payload_type_list
          (type_identifier)))
      (enum_variant
        (identifier)))))

================================================================================
Impl block (libs/std/option.cdl)
================================================================================

impl Option {
    fn is_some(self) {
        match self {
            Some(_) => { return true; }
            None => { return false; }
        }
    }
    fn unwrap_or(self, default) {
        return default;
    }
}

--------------------------------------------------------------------------------

(source_file
  (impl_block
    (type_identifier)
    (function_declaration
      (identifier)
      (parameter_list
        (parameter
          (identifier)))
      (block
        (expression_statement
          (match_expression
            (identifier)
            (match_arm_list
              (match_arm
                (match_pattern
                  (call_expression
                    (identifier)
                    (arguments
                      (identifier))))
                (block
                  (return_statement
                    (boolean_literal))))
              (match_arm
                (match_pattern
                  (identifier))
                (block
                  (return_statement
                    (boolean_literal)))))))))
    (function_declaration
      (identifier)
      (parameter_list
        (parameter
          (identifier))
        (parameter
          (identifier)))
      (block
        (return_statement
          (identifier))))))

================================================================================
Operator methods (docs/src/language/methods.md)
================================================================================

impl Vec2 {
    fn +(self, other: Vec2) -> Vec2 {
        return other;
    }
    fn -(self) -> Vec2 {
        return self;
    }
    fn ==(self, other: Vec2) -> bool {
        return true;
    }
    fn <=(self, other: Vec2) -> bool {
        return true;
    }
    fn ~(self) -> Vec2 {
        return self;
    }
}

--------------------------------------------------------------------------------

(source_file
  (impl_block
    (type_identifier)
    (operator_declaration
      (operator_name)
      (parameter_list
        (parameter
          (identifier))
        (parameter
          (identifier)
          (type_identifier)))
      (return_type
        (type_identifier))
      (block
        (return_statement
          (identifier))))
    (operator_declaration
      (operator_name)
      (parameter_list
        (parameter
          (identifier)))
      (return_type
        (type_identifier))
      (block
        (return_statement
          (identifier))))
    (operator_declaration
      (operator_name)
      (parameter_list
        (parameter
          (identifier))
        (parameter
          (identifier)
          (type_identifier)))
      (return_type
        (type_identifier))
      (block
        (return_statement
          (boolean_literal))))
    (operator_declaration
      (operator_name)
      (parameter_list
        (parameter
          (identifier))
        (parameter
          (identifier)
          (type_identifier)))
      (return_type
        (type_identifier))
      (block
        (return_statement
          (boolean_literal))))
    (operator_declaration
      (operator_name)
      (parameter_list
        (parameter
          (identifier)))
      (return_type
        (type_identifier))
      (block
        (return_statement
          (identifier))))))

================================================================================
Dynamic library block (pgo/pgo-dynlib.cdl)
================================================================================

dylib "pgo_dynlib" {
    int pgo_add_int(int,int);
    float pgo_add_float(float,float);
    int pgo_all_types(int,float,string,int[],float[],string[][],int[][],int);
}

--------------------------------------------------------------------------------

(source_file
  (dylib_block
    (string_literal)
    (signature_list
      (function_signature
        (type_identifier)
        (identifier)
        (type_identifier)
        (type_identifier))
      (function_signature
        (type_identifier)
        (identifier)
        (type_identifier)
        (type_identifier))
      (function_signature
        (type_identifier)
        (identifier)
        (type_identifier)
        (type_identifier)
        (type_identifier)
        (array_type
          (type_identifier))
        (array_type
          (type_identifier))
        (array_type
          (array_type
            (type_identifier)))
        (array_type
          (array_type
            (type_identifier)))
        (type_identifier)))))

================================================================================
Host block with a variadic signature (docs/src/integration/embedding.md)
================================================================================

host "app" {
    int width(string);
    log(...);
}

--------------------------------------------------------------------------------

(source_file
  (host_block
    (string_literal)
    (signature_list
      (function_signature
        (type_identifier)
        (identifier)
        (type_identifier))
      (function_signature
        (identifier)
        (variadic_parameter)))))

================================================================================
Host block declaring a struct with defaults (docs/src/integration/embedding.md)
================================================================================

host "process" {
    struct StartOptions {
        cwd: string = ".",
        env: {string: string},
    }
    bool start(string, StartOptions);
}

--------------------------------------------------------------------------------

(source_file
  (host_block
    (string_literal)
    (signature_list
      (struct_declaration
        (identifier)
        (field_declaration_list
          (field_declaration
            (identifier)
            (type_identifier)
            (string_literal))
          (field_declaration
            (identifier)
            (map_type
              (type_identifier)
              (type_identifier)))))
      (function_signature
        (type_identifier)
        (identifier)
        (type_identifier)
        (type_identifier)))))

================================================================================
Comments (libs/std/string.cdl, libs/std/tests/test_errors.cdl)
================================================================================

/// The character at index `i`, returned as a one-character string.
fn char_at(s, i) {
    // A call inside `try` returns its value like any other expression.
    return s[i..i + 1];
}

--------------------------------------------------------------------------------

(source_file
  (comment)
  (function_declaration
    (identifier)
    (parameter_list
      (parameter
        (identifier))
      (parameter
        (identifier)))
    (block
      (comment)
      (return_statement
        (slice_expression
          (identifier)
          (identifier)
          (binary_expression
            (identifier)
            (integer_literal)))))))

================================================================================
Type parameters on declarations (docs/src/language/generics.md)
================================================================================

struct Pair<K, V> {
    key: K,
    value: V,
}
enum Slot<T> {
    Filled(T),
    Empty,
}
fn first<T>(items: T[]) -> T {
    return items[0];
}
impl Cell<T> {
    fn tagged<U>(self, extra: U) -> U {
        return extra;
    }
}
impl Signal<int> {
    fn get(self) -> int {
        return 0;
    }
}

--------------------------------------------------------------------------------

(source_file
  (struct_declaration
    (identifier)
    (type_parameters
      (type_identifier)
      (type_identifier))
    (field_declaration_list
      (field_declaration
        (identifier)
        (type_identifier))
      (field_declaration
        (identifier)
        (type_identifier))))
  (enum_declaration
    (identifier)
    (type_parameters
      (type_identifier))
    (enum_variant_list
      (enum_variant
        (identifier)
        (payload_type_list
          (type_identifier)))
      (enum_variant
        (identifier))))
  (function_declaration
    (identifier)
    (type_parameters
      (type_identifier))
    (parameter_list
      (parameter
        (identifier)
        (array_type
          (type_identifier))))
    (return_type
      (type_identifier))
    (block
      (return_statement
        (index_expression
          (identifier)
          (integer_literal)))))
  (impl_block
    (type_identifier)
    (type_arguments
      (type_identifier))
    (function_declaration
      (identifier)
      (type_parameters
        (type_identifier))
      (parameter_list
        (parameter
          (identifier))
        (parameter
          (identifier)
          (type_identifier)))
      (return_type
        (type_identifier))
      (block
        (return_statement
          (identifier)))))
  (impl_block
    (type_identifier)
    (type_arguments
      (type_identifier))
    (function_declaration
      (identifier)
      (parameter_list
        (parameter
          (identifier)))
      (return_type
        (type_identifier))
      (block
        (return_statement
          (integer_literal))))))

================================================================================
Generic types in type positions (docs/src/language/generics.md)
================================================================================

struct Row {
    cells: Cell<int>[],
    seen: {string: Cell<Cell<int>>},
}
fn deepen(c: Cell<int>) -> Cell<Cell<int>> {
    return c;
}

--------------------------------------------------------------------------------

(source_file
  (struct_declaration
    (identifier)
    (field_declaration_list
      (field_declaration
        (identifier)
        (array_type
          (generic_type
            (type_identifier)
            (type_arguments
              (type_identifier)))))
      (field_declaration
        (identifier)
        (map_type
          (type_identifier)
          (generic_type
            (type_identifier)
            (type_arguments
              (generic_type
                (type_identifier)
                (type_arguments
                  (type_identifier)))))))))
  (function_declaration
    (identifier)
    (parameter_list
      (parameter
        (identifier)
        (generic_type
          (type_identifier)
          (type_arguments
            (type_identifier)))))
    (return_type
      (generic_type
        (type_identifier)
        (type_arguments
          (generic_type
            (type_identifier)
            (type_arguments
              (type_identifier))))))
    (block
      (return_statement
        (identifier)))))

================================================================================
A generic in a union, and a module-qualified generic (docs/src/language/generics.md)
================================================================================

struct Row {
    slot: Cell<int>|null,
    from: shapes::Cell<int>,
}
fn pick(c: shapes::Cell<int>|null) -> Cell<shapes::Point>|null {
    return c;
}

--------------------------------------------------------------------------------

(source_file
  (struct_declaration
    (identifier)
    (field_declaration_list
      (field_declaration
        (identifier)
        (union_type
          (generic_type
            (type_identifier)
            (type_arguments
              (type_identifier)))
          (type_identifier)))
      (field_declaration
        (identifier)
        (generic_type
          (qualified_type
            (type_identifier)
            (type_identifier))
          (type_arguments
            (type_identifier))))))
  (function_declaration
    (identifier)
    (parameter_list
      (parameter
        (identifier)
        (union_type
          (generic_type
            (qualified_type
              (type_identifier)
              (type_identifier))
            (type_arguments
              (type_identifier)))
          (type_identifier))))
    (return_type
      (union_type
        (generic_type
          (type_identifier)
          (type_arguments
            (qualified_type
              (type_identifier)
              (type_identifier))))
        (type_identifier)))
    (block
      (return_statement
        (identifier)))))

================================================================================
Function types on fields, parameters and returns (docs/src/language/types.md)
================================================================================

struct Button {
    on_press: fn(int) -> int,
    steps: (fn(int) -> int)[],
    hooks: {string: fn()},
}

fn apply(f: fn(int, int) -> int, xs: fn(int) -> int[]) -> fn() {
    return f;
}

--------------------------------------------------------------------------------

(source_file
  (struct_declaration
    (identifier)
    (field_declaration_list
      (field_declaration
        (identifier)
        (function_type
          (type_identifier)
          (type_identifier)))
      (field_declaration
        (identifier)
        (array_type
          (parenthesized_type
            (function_type
              (type_identifier)
              (type_identifier)))))
      (field_declaration
        (identifier)
        (map_type
          (type_identifier)
          (function_type)))))
  (function_declaration
    (identifier)
    (parameter_list
      (parameter
        (identifier)
        (function_type
          (type_identifier)
          (type_identifier)
          (type_identifier)))
      (parameter
        (identifier)
        (function_type
          (type_identifier)
          (array_type
            (type_identifier)))))
    (return_type
      (function_type))
    (block
      (return_statement
        (identifier)))))

================================================================================
Attributes
================================================================================

@cfg(web)
import "js";

@cfg(not(any(web, target = "wasm32")))
fn track(e: string) {}

impl Store {
    @cfg(all())
    fn save(self) {}
}

fn main() {
    @cfg(debug)
    print("x");
}

--------------------------------------------------------------------------------

(source_file
  (attribute
    (identifier)
    (attribute_arguments
      (cfg_predicate
        (identifier))))
  (import_declaration
    (string_literal))
  (attribute
    (identifier)
    (attribute_arguments
      (cfg_predicate
        (identifier)
        (attribute_arguments
          (cfg_predicate
            (identifier)
            (attribute_arguments
              (cfg_predicate
                (identifier))
              (cfg_predicate
                (identifier)
                (string_literal))))))))
  (function_declaration
    (identifier)
    (parameter_list
      (parameter
        (identifier)
        (type_identifier)))
    (block))
  (impl_block
    (type_identifier)
    (attribute
      (identifier)
      (attribute_arguments
        (cfg_predicate
          (identifier)
          (attribute_arguments))))
    (function_declaration
      (identifier)
      (parameter_list
        (parameter
          (identifier)))
      (block)))
  (function_declaration
    (identifier)
    (parameter_list)
    (block
      (attribute
        (identifier)
        (attribute_arguments
          (cfg_predicate
            (identifier))))
      (expression_statement
        (call_expression
          (identifier)
          (arguments
            (string_literal)))))))

================================================================================
Expression bodies with => (docs/src/language/functions.md)
================================================================================

fn double(x: int) -> int => x * 2;

impl Rect {
    fn area(self) -> int => self.w * self.h;
    fn +(self, o: Rect) -> Rect => Rect { w: self.w + o.w, h: self.h + o.h };
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (identifier)
    (parameter_list
      (parameter
        (identifier)
        (type_identifier)))
    (return_type
      (type_identifier))
    (expression_body
      (binary_expression
        (identifier)
        (integer_literal))))
  (impl_block
    (type_identifier)
    (function_declaration
      (identifier)
      (parameter_list
        (parameter
          (identifier)))
      (return_type
        (type_identifier))
      (expression_body
        (binary_expression
          (field_expression
            (identifier)
            (identifier))
          (field_expression
            (identifier)
            (identifier)))))
    (operator_declaration
      (operator_name)
      (parameter_list
        (parameter
          (identifier))
        (parameter
          (identifier)
          (type_identifier)))
      (return_type
        (type_identifier))
      (expression_body
        (struct_literal
          (identifier)
          (field_initializer_list
            (field_initializer
              (identifier)
              (binary_expression
                (field_expression
                  (identifier)
                  (identifier))
                (field_expression
                  (identifier)
                  (identifier))))
            (field_initializer
              (identifier)
              (binary_expression
                (field_expression
                  (identifier)
                  (identifier))
                (field_expression
                  (identifier)
                  (identifier))))))))))
